add open graph metadata

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "startdev": "nodemon --watch webpack.config.js --exec \"npx webpack serve --open --mode development\"",
     "compilerelease": "npx webpack --mode production",
-    "distdeploy": "git subtree push --prefix dist origin gh-pages"
+    "distdeploy": "npm run compilerelease && gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-html": "^7.1.0",
+    "gh-pages": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
